--- a/Quiz-App/css/media.css
+++ b/Quiz-App/css/media.css
@@ -1,4 +1,4 @@
 /* @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css'); */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Burned&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Rubik+Burned&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap');
